Updated the preamble
Turned on draft mode to see overfulls
Made wide to avoid overfulls
Removed ugly borders under hyperrefs

--- a/pigeons.tex
+++ b/pigeons.tex
@@ -1,14 +1,16 @@
-\documentclass[a4paper,10pt,leqno]{article}
+\documentclass[a4paper,10pt,draft]{article}
 
 \usepackage{times}
 \usepackage[T1]{fontenc}
+
+\usepackage{a4wide}
 
 \usepackage{ucs}
 \usepackage[utf8x]{inputenc}
 \usepackage{amsmath}
 \usepackage[noxy]{virginialake}
 
-\usepackage[pdftex]{hyperref}
+\usepackage[pdftex,pdfborder={0 0 0}]{hyperref}
 
 \usepackage{amsthm}
 \theoremstyle{plain}
