Order references as they appear in paper

--- a/pigeons.tex
+++ b/pigeons.tex
@@ -98,7 +98,7 @@ If adding one pigeon does not increase the number of holes inhabited, then there
 \end{lemma}
 
 \begin{proof}
-By Lemmas~\ref{lem:not-increasing:no-new-hole_subtract}, \ref{lem:no-new-hole:PHP} and \ref{lem:subtract:contradiction}.
+By Lemmas~\ref{lem:no-new-hole:PHP}, \ref{lem:subtract:contradiction} and \ref{lem:not-increasing:no-new-hole_subtract}.
 \end{proof}
 
 \begin{lemma}\label{lem:bound:not-increasing_bound}
