--- a/pigeons.tex
+++ b/pigeons.tex
@@ -173,7 +173,50 @@ For a hole that was inhabited by the first $m+1$ pigeons to not be inhabited by 
 \end{proof}
 
 \begin{lemma}\label{lem:not-increasing:no-new-hole_subtract}
-If adding the $m+2^\text{nd}$ pigeon did not increase the number of inhabited holes, then either every hole inhabited by one of the $m+2$ first pigeons was also inhabited by one of the $m+1$ first pigeons, or there is a hole that was inhabited by one of the first $m+1$ pigeons, but is not inhabited by one of the first $m+2$ pigeons.
+If adding the $m+2^\text{nd}$ pigeon did not increase the number of inhabited holes,
+then either every hole inhabited by one of the $m+2$ first pigeons was also inhabited by one of the $m+1$ first pigeons,
+or there is a hole that was inhabited by one of the first $m+1$ pigeons, but is not inhabited by one of the first $m+2$ pigeons.
+\[
+  \vlder{}{}{\vlsbr[\AND{j=0}{n-1}\vlsbr[r_j^m.\bar r_j^{m+1}].\OR{j=0}{n-1}\vlsbr(r_j^m.\bar r_j^{m+1})]}{\Count(r_0^m,\dots,r_{n-1}^m)\geq\Count(r_0^{m+1},\dots,r_{n-1}^{m+1})}
+\quad.\]
+\end{lemma}
+
+\begin{lemma}
+If adding the $m+2^\text{nd}$ pigeon decreased the number of inhabited holes,
+then there is a hole that was inhabited by one of the first $m+1$ pigeons, but is not inhabited by one of the first $m+2$ pigeons.
+\[
+  \vlder{}{}
+  {
+    \OR{j=0}{n-1}\vlsbr(r_j^m.\bar r_j^{m+1})
+  }
+  {
+    \Count(r_0^m,\dots,r_{n-1}^m)>\Count(r_0^{m+1},\dots,r_{n-1}^{m+1})
+  }
+\quad.\]
+\end{lemma}
+
+\begin{proof}
+By Lemma~\ref{lem:push-comparisons}.
+\end{proof}
+
+\begin{lemma}\label{lem:push-comparisons}
+For suitably chosen $s$ and $t$, we have:
+\[
+  \vlder{}{}
+  {
+    \OR{j=0}{n-1}\vlsbr(r_j^m.\bar r_j^{m+1})
+  }
+  {
+    \vls(\Count(r_s^m,\dots,r_t^m)>\Count(r_s^{m+1},\dots,r_t^{m+1}).2^{t-s}>\Count(r_s^{m+1},\dots,r_t^{m+1}))
+  }
+\quad.\]
+\end{lemma}
+
+\begin{proof}
+By induction and Lemmas~\ref{lem:basics} and \ref{lem:CSAdd4}.
+\end{proof}
+
+\newcommand{\Add}{\mathsf{Add}}
 
 \[
   \vlder{}{}{\vlsbr[\AND{j=0}{n-1}\vlsbr[r_j^m.\bar r_j^{m+1}].\OR{j=0}{n-1}\vlsbr(r_j^m.\bar r_j^{m+1})]}{\Count{r}{m}\geq\Count{r}{m+1}}
