Added remark about representation of numbers

--- a/pigeons.tex
+++ b/pigeons.tex
@@ -65,6 +65,10 @@
 \newcommand{\Count}{\mathsf{Count}}
 \newcommand{\PHP}[1]{\mathsf{PHP}_{#1}}
 
+\begin{remark}
+We will encode numbers by sequences of formulae. When we define operations on numbers, we expect the inputs to have the same number of bits, and the output will increase the number of bits if and only if this is necessary to ensure there is no overflow.
+\end{remark}
+
 \begin{definition}
 This is the intuitive meaning of the atoms and predicates we will use:
 \begin{itemize}
