--- a/pigeons.tex
+++ b/pigeons.tex
@@ -79,6 +79,93 @@ This is the intuitive meaning of the atoms and predicates we will use:
 \end{itemize}
 \end{definition}
 
+\newcommand{\Add}{\mathsf{Add}}
+
+\begin{lemma}\label{lem:basics}
+Some basic results
+\begin{enumerate}
+ \item
+\[
+\vlproof{}{}{\Add(a,b)=\Add(b,a)}
+\quad,\]
+ \item
+\[
+\vlder{}{}{\Add(a_1,a_2)\leq\Add(b_1,b_2)}{\vls(a_1\leq b_1.a_2\leq b_2)}
+\quad,\quad\text{and}\]
+\item
+\[
+\vlder{}{}{\Add(a_1,a_2)<\Add(b_1,b_2)}{\vls(a_1\leq b_1.a_2< b_2)}
+\]
+\end{enumerate}
+\end{lemma}
+
+\newcommand{\AddCarryF}{\mathsf{AddCarry4}}
+\newcommand{\AddSaveF}{\mathsf{AddSave4}}
+\newcommand{\AddCarry}{\mathsf{AddCarry}}
+\newcommand{\AddSave}{\mathsf{AddSave}}
+\newcommand{\CountCarry}{\mathsf{CountCarry}}
+\newcommand{\CountSave}{\mathsf{CountSave}}
+\begin{definition}
+Definitions of some predicates:
+\begin{itemize}
+ \item $\AddCarryF(\vec a,\vec b,\vec c,\vec d)=\AddCarry(\AddCarry(\vec a,\vec b,\vec c),\AddSave(\vec a,\vec b,\vec c),\vec d)$,
+ \item $\AddSaveF(\vec a,\vec b,\vec c,\vec d)=\AddSave(\AddCarry(\vec a,\vec b,\vec c),\AddSave(\vec a,\vec b,\vec c),\vec d)$,
+ \item $\CountCarry(a_1)=\fff$,
+ \item $\CountCarry(a_1,\dots,a_{2^\rho})=\AddCarryF(\CountCarry(a_1,\dots,a_{2^{\rho-1}}),\CountSave(a_1,\dots,a_{2^{\rho-1}}),\CountCarry(a_{2^{\rho-1}+1},\dots,a_{2^\rho}),\CountSave(a_{2^{\rho-1}+1},\dots,a_{2^\rho}))$,
+ \item $\CountSave(a_1)=a_1$,
+ \item $\CountSave(a_1,\dots,a_{2^\rho})=\AddSaveF(\CountCarry(a_1,\dots,a_{2^{\rho-1}}),\CountSave(a_1,\dots,a_{2^{\rho-1}}),\CountCarry(a_{2^{\rho-1}+1},\dots,a_{2^\rho}),\CountSave(a_{2^{\rho-1}+1},\dots,a_{2^\rho}))$, and
+ \item $\Count(a_1,\dots,a_{2^\rho}) = \Add(\CountCarry(a_1,\dots,a_{2^\rho}),\CountSave(a_1,\dots,a_{2^\rho}))$
+\end{itemize}
+
+\end{definition}
+
+\begin{lemma}\label{lem:CSAdd4}
+Carry-save addition is correct with respect to normal addition
+\[
+\vlproof{}{}
+{
+\Add(\AddCarryF(a,b,c,d),\AddSaveF(a,b,c,d))=\Add(\Add(a,b),\Add(c,d))
+}
+\]
+\end{lemma}
+
+All the above definitions and results are only there to prove the following (so whatever is not needed can be changed or removed):
+
+\begin{lemma}\label{lem:push-comparisons-one-step}
+Given two sets of atoms, if the count of the first set is greater than the count of the second set, then either the count of the first half of the first set is greater than the count of the first half of the second set, or the count of the second half of the first set is greater than the count of the second half of the second set.
+
+Given atoms $a_1$, $\dots$, $a_{2^\rho}$ and $b_1$, $\dots$, $b_{2^\rho}$, the following derivation can be constructed:
+\[
+  \vlder{}{}
+  {
+    \vls
+    [
+      \Count(a_1, \dots, a_{2^{\rho-1}})>\Count(b_1, \dots, b_{2^{\rho-1}})
+    .
+      \Count(a_{2^{\rho-1}+1}, \dots, a_{2^\rho})>\Count(b_{2^{\rho-1}+1}, \dots, b_{2^\rho})
+    ]
+  }
+  {
+    \Count(a_1, \dots, a_{2^\rho})>\Count(b_1, \dots, b_{2^\rho})
+  }
+\quad.\]
+\end{lemma}
+
+\begin{proof}
+By Lemmas~\ref{lem:basics} and \ref{lem:CSAdd4}.
+\end{proof}
+
+
+% AddCarry(as,bs,cs)=zipWith3 xor as bs cs
+% AddSave(as,bs,cs)=zipWith3
+%
+% CountCarry(a_1) = \fff
+% CountCarry(as++bs) = AddCarry4(CountCarry(as),CountSave(as),CountCarry(bs),CountSave(bs))
+% CountSave(a_1) = a_1
+% CountSave(as++bs) = AddSave4(CountCarry(as),CountSave(as),CountCarry(bs),CountSave(bs))
+%
+% Count(a_1,\dots,a_n) = Add(CountCarry(a_1,\dots,a_n),CountSave(a_1,\dots,a_n))
+
 
 \begin{lemma}\label{lem:at-most-full}
 At most all the ($n$) holes are inhabited by all the ($n+1$) pigeons.
@@ -222,46 +309,26 @@ By induction and Lemmas~\ref{lem:basics} and \ref{lem:CSAdd4}.
 
 \newcommand{\Add}{\mathsf{Add}}
 
-\begin{lemma}
-Some basic results
-\begin{itemize}\label{lem:basics}
- \item
+Given atoms $a_1$, $\dots$, $a_{2^\rho}$ and $b_1$, $\dots$, $b_{2^\rho}$, the following derivation can be constructed:
 \[
-\vlproof{}{}{\Add(a,b)=\Add(b,a)}
-\quad,\]
- \item
-\[
-\vlder{}{}{\Add(a_1,a_2)\leq\Add(b_1,b_2)}{\vls(a_1\leq b_1.a_2\leq b_2)}
-\quad,\quad\text{and}\]
-\item
-\[
-\vlder{}{}{\Add(a_1,a_2)<\Add(b_1,b_2)}{\vls(a_1\leq b_1.a_2< b_2)}
-\]
-\end{itemize}
+  \vlder{}{}
+  {
+    \vls
+    [
+      \Count(a_1, \dots, a_{2^{\rho-1}})>\Count(b_1, \dots, b_{2^{\rho-1}})
+    .
+      \Count(a_{2^{\rho-1}+1}, \dots, a_{2^\rho})>\Count(b_{2^{\rho-1}+1}, \dots, b_{2^\rho})
+    ]
+  }
+  {
+    \Count(a_1, \dots, a_{2^\rho})>\Count(b_1, \dots, b_{2^\rho})
+  }
+\quad.\]
 \end{lemma}
 
-\newcommand{\AddCarryF}{\mathsf{AddCarry4}}
-\newcommand{\AddSaveF}{\mathsf{AddSave4}}
-
-\begin{lemma}\label{lem:CSAdd4}
-Carry-save addition is correct with respect to normal addition
-\[
-\vlproof{}{}
-{
-\Add(\AddCarryF(a,b,c,d),\AddSaveF(a,b,c,d))=\Add(\Add(a,b),\Add(c,d))
-}
-\]
-\end{lemma}
-
-% AddCarry(as,bs,cs)=zipWith3 xor as bs cs
-% AddSave(as,bs,cs)=zipWith3
-%
-% CountCarry(a_1) = \fff
-% CountCarry(as++bs) = AddCarry4(CountCarry(as),CountSave(as),CountCarry(bs),CountSave(bs))
-% CountSave(a_1) = a_1
-% CountSave(as++bs) = AddSave4(CountCarry(as),CountSave(as),CountCarry(bs),CountSave(bs))
-%
-% Count(a_1,\dots,a_n) = Add(CountCarry(a_1,\dots,a_n),CountSave(a_1,\dots,a_n))
+\begin{proof}
+By Lemmas~\ref{lem:basics} and \ref{lem:CSAdd4}.
+\end{proof}
 
 \end{document}
 
