--- a/pigeons.tex
+++ b/pigeons.tex
@@ -177,7 +177,7 @@ At most all the ($n$) holes are inhabited by all the ($n+1$) pigeons.
 \begin{lemma}\label{lem:no-pigeon:PHP}
 If the first pigeon is not in a hole, then the pigeon hole principle holds.
 \[
-\vlder{}{}{\PHP{n}}{0\geq\Count{r}{0}}
+\vlder{}{}{\PHP{n}}{0\geq\Count(r_0^m,\dots,r_{n-1}^n)}
 \quad.\]
 \end{lemma}
 
