Reformulated Lemma about pushing comparison to the leaves
It now uses the main lemma

--- a/pigeons.tex
+++ b/pigeons.tex
@@ -291,43 +291,21 @@ By Lemma~\ref{lem:push-comparisons}.
 \end{proof}
 
 \begin{lemma}\label{lem:push-comparisons}
-For suitably chosen $s$ and $t$, we have:
+Select a subset of the holes, by dividing the holes in two $\rho$ times and picking the $t^\text{th}$ subset, so obtained. If adding the $m+2^\text{nd}$ pigeon decreases the number of the selected holes that are inhabited, and at most all of the selected holes are inhabited, then one of the selected holes was inhabited by one of the first $m+1$ pigeons, but not by the first $m+2$.
+For $0\leq\rho$, such that $2^\rho<n$ and $0\leq t\leq n$.
 \[
   \vlder{}{}
   {
-    \OR{j=0}{n-1}\vlsbr(r_j^m.\bar r_j^{m+1})
+    \OR{j={t2^\rho}}{(t+1)2^\rho-1}\vlsbr(r_j^m.\bar r_j^{m+1})
   }
   {
-    \vls(\Count(r_s^m,\dots,r_t^m)>\Count(r_s^{m+1},\dots,r_t^{m+1}).2^{t-s}>\Count(r_s^{m+1},\dots,r_t^{m+1}))
+    \vls(\Count(r_{t2^\rho}^m,\dots,r_{(t+1)2^\rho-1}^m)>\Count(r_{t(2^\rho)}^{m+1},\dots,r_{(t+1)2^\rho-1}^{m+1}).2^\rho>\Count(r_{t2^\rho}^{m+1},\dots,r_{(t+1)2^\rho-1}^{m+1}))
   }
 \quad.\]
 \end{lemma}
 
 \begin{proof}
-By induction and Lemmas~\ref{lem:basics} and \ref{lem:CSAdd4}.
-\end{proof}
-
-\newcommand{\Add}{\mathsf{Add}}
-
-Given atoms $a_1$, $\dots$, $a_{2^\rho}$ and $b_1$, $\dots$, $b_{2^\rho}$, the following derivation can be constructed:
-\[
-  \vlder{}{}
-  {
-    \vls
-    [
-      \Count(a_1, \dots, a_{2^{\rho-1}})>\Count(b_1, \dots, b_{2^{\rho-1}})
-    .
-      \Count(a_{2^{\rho-1}+1}, \dots, a_{2^\rho})>\Count(b_{2^{\rho-1}+1}, \dots, b_{2^\rho})
-    ]
-  }
-  {
-    \Count(a_1, \dots, a_{2^\rho})>\Count(b_1, \dots, b_{2^\rho})
-  }
-\quad.\]
-\end{lemma}
-
-\begin{proof}
-By Lemmas~\ref{lem:basics} and \ref{lem:CSAdd4}.
+By induction and Lemma~\ref{lem:push-comparisons-one-step}.
 \end{proof}
 
 \end{document}
