--- a/pigeons.tex
+++ b/pigeons.tex
@@ -165,48 +165,55 @@ This is the intuitive meaning of the atoms and predicates we will use:
 \end{itemize}
 \end{definition}
 
-\begin{lemma}\label{lem:at-most-full}
-At most all the ($n$) holes are inhabited by all the ($n+1$) pigeons.
-\[
-\vlproof{}{}{n\geq\Count(r_0^m,\dots,r_{n-1}^n)}
-\quad.\]
-\end{lemma}
 
-\begin{lemma}\label{lem:no-pigeon:PHP}
-If the first pigeon is not in a hole, then the pigeon hole principle holds.
+\begin{lemma}\label{lem:push-comparisons}
+Select a subset of the holes, by dividing the holes in two $\rho$ times and picking the $t^\text{th}$ subset, so obtained. If adding the $m+2^\text{nd}$ pigeon decreases the number of the selected holes that are inhabited, and at most all of the selected holes are inhabited, then one of the selected holes was inhabited by one of the first $m+1$ pigeons, but not by the first $m+2$.
+For $0\leq\rho$, such that $2^\rho<n$ and $0\leq t\leq n$.
 \[
-\vlder{}{}{\PHP{n}}{0\geq\Count(r_0^m,\dots,r_{n-1}^n)}
-\quad.\]
-\end{lemma}
-
-\begin{lemma}\label{lem:not-increasing:PHP}
-If adding one pigeon does not increase the number of holes inhabited, then there is a hole with two pigeons, so the pigeon hole principle holds.
-\[
-\vlder{}{}{\PHP{n}}{\Count(r_0^m,\dots,r_{n-1}^m)\geq\Count(r_0^{m+1},\dots,r_{n-1}^{m+1})}
+  \vlder{}{}
+  {
+    \OR{j={t2^\rho}}{(t+1)2^\rho-1}\vlsbr(r_j^m.\bar r_j^{m+1})
+  }
+  {
+    \vls(\Count(r_{t2^\rho}^m,\dots,r_{(t+1)2^\rho-1}^m)>\Count(r_{t(2^\rho)}^{m+1},\dots,r_{(t+1)2^\rho-1}^{m+1}).2^\rho>\Count(r_{t2^\rho}^{m+1},\dots,r_{(t+1)2^\rho-1}^{m+1}))
+  }
 \quad.\]
 \end{lemma}
 
 \begin{proof}
-By Lemmas~\ref{lem:no-new-hole:PHP}, \ref{lem:subtract:contradiction} and \ref{lem:not-increasing:no-new-hole_subtract}.
+By induction and Lemma~\ref{lem:push-comparisons-one-step}.
 \end{proof}
 
-\begin{lemma}\label{lem:bound:not-increasing_bound}
-If at most $m$ holes are inhabeted by the first $m+1$ pigeons, then either adding the $m+1^\text{st}$ pigeon did not increase the number of holes inhabited, or it did, and at most $m-1$ holes are inhabited by the first $m$ pigeons.
+\begin{lemma}\label{lem:decrease:evacuation}
+If adding the $m+2^\text{nd}$ pigeon decreased the number of inhabited holes,
+then there is a hole that was inhabited by one of the first $m+1$ pigeons, but is not inhabited by one of the first $m+2$ pigeons.
 \[
-\vlder{}{}
-{
-  \vls
-  [
-    \Count{r}{m-1}\geq\Count(r_0^m,\dots,r_{n-1}^m)
-  \;.\;
-    (m-1)\geq\Count{r}{m-1}
-  ]
-}
-{
-  m\geq\Count(r_0^m,\dots,r_{n-1}^m)
-}
+  \vlder{}{}
+  {
+    \OR{j=0}{n-1}\vlsbr(r_j^m.\bar r_j^{m+1})
+  }
+  {
+    \Count(r_0^m,\dots,r_{n-1}^m)>\Count(r_0^{m+1},\dots,r_{n-1}^{m+1})
+  }
 \quad.\]
 \end{lemma}
+
+\begin{proof}
+By Lemma~\ref{lem:push-comparisons}.
+\end{proof}
+
+\begin{lemma}\label{lem:not-increasing:no-new-hole_subtract}
+If adding the $m+2^\text{nd}$ pigeon did not increase the number of inhabited holes,
+then either every hole inhabited by one of the $m+2$ first pigeons was also inhabited by one of the $m+1$ first pigeons,
+or there is a hole that was inhabited by one of the first $m+1$ pigeons, but is not inhabited by one of the first $m+2$ pigeons.
+\[
+  \vlder{}{}{\vlsbr[\AND{j=0}{n-1}\vlsbr[r_j^m.\bar r_j^{m+1}].\OR{j=0}{n-1}\vlsbr(r_j^m.\bar r_j^{m+1})]}{\Count(r_0^m,\dots,r_{n-1}^m)\geq\Count(r_0^{m+1},\dots,r_{n-1}^{m+1})}
+\quad.\]
+\end{lemma}
+
+\begin{proof}
+By Lemma~\ref{lem:decrease:evacuation}
+\end{proof}
 
 \begin{lemma}\label{lem:no-new-hole:PHP}
 If no hole that was not inhabited by the first $m+1$ pigeons is inhabited by the first $m+2$ pigeons, then there is a hole with two pigeons, so the pigeon hole principle holds.
@@ -261,50 +268,60 @@ For a hole that was inhabited by the first $m+1$ pigeons to not be inhabited by 
 \quad.\]
 \end{proof}
 
-\begin{lemma}\label{lem:not-increasing:no-new-hole_subtract}
-If adding the $m+2^\text{nd}$ pigeon did not increase the number of inhabited holes,
-then either every hole inhabited by one of the $m+2$ first pigeons was also inhabited by one of the $m+1$ first pigeons,
-or there is a hole that was inhabited by one of the first $m+1$ pigeons, but is not inhabited by one of the first $m+2$ pigeons.
+\begin{lemma}\label{lem:not-increasing:PHP}
+If adding one pigeon does not increase the number of holes inhabited, then there is a hole with two pigeons, so the pigeon hole principle holds.
 \[
-  \vlder{}{}{\vlsbr[\AND{j=0}{n-1}\vlsbr[r_j^m.\bar r_j^{m+1}].\OR{j=0}{n-1}\vlsbr(r_j^m.\bar r_j^{m+1})]}{\Count(r_0^m,\dots,r_{n-1}^m)\geq\Count(r_0^{m+1},\dots,r_{n-1}^{m+1})}
-\quad.\]
-\end{lemma}
-
-\begin{lemma}
-If adding the $m+2^\text{nd}$ pigeon decreased the number of inhabited holes,
-then there is a hole that was inhabited by one of the first $m+1$ pigeons, but is not inhabited by one of the first $m+2$ pigeons.
-\[
-  \vlder{}{}
-  {
-    \OR{j=0}{n-1}\vlsbr(r_j^m.\bar r_j^{m+1})
-  }
-  {
-    \Count(r_0^m,\dots,r_{n-1}^m)>\Count(r_0^{m+1},\dots,r_{n-1}^{m+1})
-  }
+\vlder{}{}{\PHP{n}}{\Count(r_0^m,\dots,r_{n-1}^m)\geq\Count(r_0^{m+1},\dots,r_{n-1}^{m+1})}
 \quad.\]
 \end{lemma}
 
 \begin{proof}
-By Lemma~\ref{lem:push-comparisons}.
+By Lemmas~\ref{lem:no-new-hole:PHP}, \ref{lem:subtract:contradiction} and \ref{lem:not-increasing:no-new-hole_subtract}.
 \end{proof}
 
-\begin{lemma}\label{lem:push-comparisons}
-Select a subset of the holes, by dividing the holes in two $\rho$ times and picking the $t^\text{th}$ subset, so obtained. If adding the $m+2^\text{nd}$ pigeon decreases the number of the selected holes that are inhabited, and at most all of the selected holes are inhabited, then one of the selected holes was inhabited by one of the first $m+1$ pigeons, but not by the first $m+2$.
-For $0\leq\rho$, such that $2^\rho<n$ and $0\leq t\leq n$.
+\begin{lemma}\label{lem:at-most-full}
+At most all the ($n$) holes are inhabited by all the ($n+1$) pigeons.
 \[
-  \vlder{}{}
-  {
-    \OR{j={t2^\rho}}{(t+1)2^\rho-1}\vlsbr(r_j^m.\bar r_j^{m+1})
-  }
-  {
-    \vls(\Count(r_{t2^\rho}^m,\dots,r_{(t+1)2^\rho-1}^m)>\Count(r_{t(2^\rho)}^{m+1},\dots,r_{(t+1)2^\rho-1}^{m+1}).2^\rho>\Count(r_{t2^\rho}^{m+1},\dots,r_{(t+1)2^\rho-1}^{m+1}))
-  }
+\vlproof{}{}{n\geq\Count(r_0^m,\dots,r_{n-1}^n)}
 \quad.\]
 \end{lemma}
 
+\begin{lemma}\label{lem:no-pigeon:PHP}
+If the first pigeon is not in a hole, then the pigeon hole principle holds.
+\[
+\vlder{}{}{\PHP{n}}{0\geq\Count(r_0^m,\dots,r_{n-1}^n)}
+\quad.\]
+\end{lemma}
+
+\begin{lemma}\label{lem:bound:not-increasing_bound}
+If at most $m$ holes are inhabeted by the first $m+1$ pigeons, then either adding the $m+1^\text{st}$ pigeon did not increase the number of holes inhabited, or it did, and at most $m-1$ holes are inhabited by the first $m$ pigeons.
+\[
+\vlder{}{}
+{
+  \vls
+  [
+    \Count(r_0^{m-1},\dots,r_{n-1}^{m-1})\geq\Count(r_0^m,\dots,r_{n-1}^m)
+  \;.\;
+    (m-1)\geq\Count(r_0^{m-1},\dots,r_{n-1}^{m-1})
+  ]
+}
+{
+  m\geq\Count(r_0^m,\dots,r_{n-1}^m)
+}
+\quad.\]
+\end{lemma}
+
+\begin{theorem}
+Given $n$ pigeons and $n-1$ pigeon holes, if every pigeon is in a hole, then there is a hole with two pigeons.
+\[
+\vlproof{}{}{\PHP{n}}
+\]\quad.
+\end{theorem}
+
 \begin{proof}
-By induction and Lemma~\ref{lem:push-comparisons-one-step}.
+By Lemmas~\ref{lem:at-most-full}, \ref{lem:no-pigeon:PHP}, \ref{lem:not-increasing:PHP} and \ref{lem:bound:not-increasing_bound}.
 \end{proof}
+
 
 \end{document}
 
