--- a/pigeons.tex
+++ b/pigeons.tex
@@ -84,11 +84,11 @@ Some basic results
 % \]
  \item
 \[
-\vlder{}{}{\vls(a>b.b=c)}{a>c}
+\vlder{}{}{a>c}{\vls(a>b.b=c)}
 \]
  \item
 \[
-\vlder{}{}{\vls(b>a.b=c)}{c>a}
+\vlder{}{}{c<a}{\vls(b>a.b=c)}
 \quad,\quad\text{and}\]
  \item
 \[
